<resources>
    <string name="app_name">All-Study</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="teacher_id">Teacher ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="student_id">Student ID</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="teacher_log_in">Teacher Log In</string>
    <string name="login">Login</string>
    <string name="forgot_passwords">Forgot password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="send">Send</string>
    <string name="teacher_sign_up">Teacher Sign Up</string>
    <string name="teacheridSign_up">Teacher ID</string>
    <string name="active_server">Active Server</string>
    <string name="join_now">Join Now</string>
    <string name="coding">Coding</string>
    <string name="more_active_servers">More active Servers</string>
    <string name="list_of_servers">List of Servers</string>
    <string name="verification">Verification</string>
    <string name="didn_t_receive_a_code_resend">Didn\'t receive a code? Resend</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="resend">Resend</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="student_sign_in">Student Sign In</string>
    <string name="teacher_sign_in">Teacher Sign In</string>
    <string name="are_you_a">Are you a</string>
    <string name="back_button">Back Button</string>
</resources>