<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/halfbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/teacherloginsplash"/>

    <TextView
        android:id="@+id/teacherlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/halfbg"
        android:layout_margin="20dp"
        android:textSize="28sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:padding="10dp"
        android:hint="@string/email"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/teacherlogin"
        android:layout_margin="10dp"
        android:background="@drawable/circular_stroke"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:padding="10dp"
        android:hint="@string/password"
        android:layout_centerInParent="true"
        android:layout_below="@+id/email"
        android:background="@drawable/circular_stroke"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="294dp"
        android:layout_height="49dp"
        android:layout_centerInParent="true"
        android:backgroundTint="#313231"
        android:text="@string/sign_in"
        android:layout_below="@+id/password"
        android:textSize="15sp"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/forgot_passwords"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_centerInParent="true"
        android:layout_margin="40dp"
        android:layout_below="@id/forgotpassword" />


</RelativeLayout>