<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/allstudyhalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/allstudyhalfbg"
        android:layout_centerInParent="true"/>"

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_centerInParent="true"
        android:layout_below="@+id/allstudyhalf"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="20dp"
        />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/signup"
        android:hint="@string/first_name"
        android:padding="10dp"
        android:background="@drawable/circular_stroke"
        />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/firstname"
        android:hint="@string/last_name"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/circular_stroke"/>

    <EditText
        android:id="@+id/teacherid"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/lastname"
        android:hint="@string/teacher_id"
        android:padding="10dp"
        android:background="@drawable/circular_stroke"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/teacherid"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/circular_stroke"/>

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/password"
        android:hint="@string/confirm_password"
        android:padding="10dp"

        android:background="@drawable/circular_stroke"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@id/confirmpassword"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/black"
        android:layout_margin="20dp"
        android:textSize="15sp" />

</RelativeLayout>