<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignmeIn">

    <ImageView
        android:id="@+id/comp"
        android:layout_width="441dp"
        android:layout_height="363dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/allstudyhalf" />

    <Button
        android:id="@+id/navback"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/navigate_next"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/navigate_next" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="360dp"
        android:layout_height="504dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="351dp"
        android:src="@drawable/custom_rectangle" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="386dp"
        android:layout_centerHorizontal="true"
        android:text="@string/student_sign_in"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/sign_in"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_edit_text"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:layout_margin="15dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:background="@drawable/round_edit_text"
        android:hint="@string/password"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/buttonsign"
        android:layout_width="294dp"
        android:layout_height="49dp"
        android:layout_below="@id/password"
        android:backgroundTint="#313231"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:layout_margin="25dp"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonsign"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_passwords"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/signmeup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="#26198F"
            android:paddingStart="5dp"/>

    </LinearLayout>




</RelativeLayout>