<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageforgotpassword"
        android:layout_width="360dp"
        android:layout_height="435dp"
        android:src="@drawable/group_15"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@+id/Tnavback"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/navigate_next"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/navigate_next" />

    <ImageView
        android:id="@+id/rectangles"
        android:layout_width="360dp"
        android:layout_height="365dp"
        android:src="@drawable/custom_rectangle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="435dp"/>

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_centerInParent="true"
        android:layout_below="@+id/imageforgotpassword"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="30dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:hint="@string/email"
        android:layout_below="@id/forgotpassword"
        android:layout_centerInParent="true"
        android:background="@drawable/circular_stroke"
        android:padding="10dp" />

    <Button
        android:id="@+id/send"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:text="@string/send"
        android:layout_centerInParent="true"
        android:layout_below="@id/email"
        android:layout_margin="30dp"
        android:backgroundTint="@color/black" />

    <LinearLayout
        android:id="@+id/circlesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/signmeup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/Sign_Up"
            android:textColor="#26198F"
            android:paddingStart="5dp"/>

    </LinearLayout>


</RelativeLayout>