<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/allstudyhalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/allstudyhalfbg" />

    <ImageButton
        android:id="@+id/Tnavback"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/navigate_next"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/navigate_next" />


    <ImageView
        android:layout_width="360dp"
        android:layout_height="555dp"
        android:layout_below="@id/allstudyhalf"
        android:layout_centerHorizontal="true"
        android:src="@drawable/custom_rectangle" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allstudyhalf"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/signup"
        android:background="@drawable/round_edit_text"
        android:hint="@string/first_name"
        android:layout_centerHorizontal="true"
        android:padding="10dp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/firstname"
        android:layout_centerHorizontal="true"
        android:hint="@string/last_name"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edit_text" />

    <EditText
        android:id="@+id/studentid"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/lastname"
        android:layout_centerHorizontal="true"
        android:hint="@string/student_id"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edit_text" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/studentid"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edit_text"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/passWord"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edit_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="294dp"
        android:layout_height="49dp"
        android:layout_below="@+id/confirmpassword"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#313231"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:layout_margin="20dp"/>


</RelativeLayout>