<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageforgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/allstudyforgotpassword" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="30dp"
        android:layout_below="@+id/imageforgotpassword"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:hint="@string/email"
        android:layout_below="@id/forgotpassword"
        android:layout_centerInParent="true"
        android:background="@drawable/circular_stroke"
        android:padding="10dp" />

    <Button
        android:id="@+id/send"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:text="@string/send"
        android:layout_centerInParent="true"
        android:layout_below="@id/email"
        android:layout_margin="30dp"
        android:backgroundTint="@color/black" />

</RelativeLayout>