<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/allstudyhalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/allstudyhalfbg" />

    <ImageView
        android:layout_width="360dp"
        android:layout_height="592dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-15dp"
        android:src="@drawable/custom_rectangle" />

    <TextView
        android:id="@+id/Tsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allstudyhalf"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/Tfirstname"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/Tsignup"
        android:layout_centerHorizontal="true"
        android:hint="@string/first_name"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edit_text" />

    <EditText
        android:id="@+id/Tlastname"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/Tfirstname"
        android:layout_centerHorizontal="true"
        android:hint="@string/last_name"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edit_text" />

    <EditText
        android:id="@+id/teacherid"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/Tlastname"
        android:layout_centerHorizontal="true"
        android:hint="@string/teacheridSign_up"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="@drawable/round_edit_text" />

    <EditText
        android:id="@+id/Tpassword"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/teacherid"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="@drawable/round_edit_text"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Tconfirmpassword"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_below="@+id/Tpassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="@drawable/round_edit_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/TsignupButton"
        android:layout_width="294dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Tconfirmpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:backgroundTint="#313231"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/Tnavback"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/navigate_next"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/navigate_next" />

    </FrameLayout>


</RelativeLayout>