<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin_SignUp">

    <ImageView
        android:id="@+id/splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/halfsplash_for_signin_signup"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signin"
        android:layout_width="294dp"
        android:layout_height="55dp"
        android:layout_below="@+id/splash"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#313231"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="294dp"
        android:layout_height="49dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/signin"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@drawable/circular_stroke"
        />

    <CheckBox
        android:id="@+id/agreecheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree_to_the_terms_and_conditions"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_below="@id/signup"/>


    </RelativeLayout>