<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherOrStudentSignIn">

    <ImageView
        android:id="@+id/logonamin"
        android:layout_width="222dp"
        android:layout_height="202dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:src="@drawable/logonamin" />

    <ImageButton
        android:id="@+id/navback"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/navigate_next"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/navigate_next" />

    <TextView
        android:id="@+id/areayoua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logonamin"
        android:text="@string/are_you_a"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>


    <LinearLayout
        android:id="@+id/teacher_or_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_below="@id/areayoua"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/student_icon"
            android:background="@drawable/circle_for_profile"/>

        <ImageButton
            android:id="@+id/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/teacher_icon"
            android:background="@drawable/circle_for_profile"
            android:layout_marginStart="100dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/teacher_or_student_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacher_or_student"
        android:layout_margin="25dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:layout_marginStart="100dp"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>